Changing profile picture; change social media; change description

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -53,35 +53,16 @@ const year = date.getFullYear();
           )
         }
         {
-          GLOBAL.twitterProfile && (
-            <Anchor url={GLOBAL.twitterProfile} aria-label="Twitter Profile">
+          GLOBAL.blueskyProfile && (
+            <Anchor url={GLOBAL.blueskyProfile} aria-label="Bluesky Profile">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="32"
-                height="32"
-                viewBox="0 0 24 24"
+                xml:space="preserve"
+                viewBox="0 30.56 512 450.84"
               >
                 <path
-                  class="zag-fill zag-transition"
-                  d="m17.687 3.063l-4.996 5.711l-4.32-5.711H2.112l7.477 9.776l-7.086 8.099h3.034l5.469-6.25l4.78 6.25h6.102l-7.794-10.304l6.625-7.571zm-1.064 16.06L5.654 4.782h1.803l10.846 14.34z"
-                />
-              </svg>
-            </Anchor>
-          )
-        }
-        {
-          GLOBAL.linkedinProfile && (
-            <Anchor url={GLOBAL.linkedinProfile} aria-label="LinkedIn Profile">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="32"
-                height="32"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  class="zag-fill zag-transition"
-                  fill="currentColor"
-                  d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zm-11.12 19h-3.08v-9h3.08v9zm-1.54-10.29c-.99 0-1.79-.8-1.79-1.79s.8-1.79 1.79-1.79 1.79.8 1.79 1.79-.8 1.79-1.79 1.79zm13.16 10.29h-3.08v-4.89c0-1.16-.02-2.64-1.61-2.64s-1.86 1.26-1.86 2.57v4.96h-3.08v-9h2.96v1.23h.04c.41-.78 1.4-1.6 2.88-1.6 3.08 0 3.65 2.03 3.65 4.66v4.71z"
+                  d="M111 60.9c58.7 44.1 121.8 133.4 145 181.4 23.2-47.9 86.3-137.3 145-181.4 42.4-31.8 111-56.4 111 21.9 0 15.6-9 131.3-14.2 150.1-18.3 65.3-84.9 82-144.1 71.9 103.5 17.6 129.9 76 73 134.4-108 110.9-155.3-27.8-167.4-63.4-2.2-6.5-3.3-9.6-3.3-7 0-2.6-1.1.5-3.3 7-12.1 35.5-59.4 174.2-167.4 63.4-56.9-58.4-30.5-116.8 73-134.4-59.2 10.1-125.8-6.5-144.1-71.8C9 214.2 0 98.5 0 82.8 0 4.5 68.6 29.1 111 60.9"
+                  style="fill:#1185fe"
                 />
               </svg>
             </Anchor>
