Allow frontmatter to only specify 'username/repo'

--- a/src/components/home/FeaturedProjects.astro
+++ b/src/components/home/FeaturedProjects.astro
@@ -26,7 +26,7 @@ const { featuredProjects } = Astro.props;
             title={project.title}
             description={project.description}
             url={project.filename}
-            githubUrl={project.githubUrl}
+            githubUrl={`https://github.com/${project.githubUrl}`}
             liveUrl={project.liveUrl}
             tags={project.tags ?? []}
           />
